--- a/train_model_3.ipynb
+++ b/train_model_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 691,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 692,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 693,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "[569 rows x 32 columns]"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 693,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,13 +423,14 @@
     "x_data = data.drop(['diagnosis'], axis = 1)\n",
     "\n",
     "# Chuẩn hóa \n",
+    "#x = (x_data - np.min(x_data))/(np.max(x_data) - np.min(x_data))\n",
     "x = x_data\n",
     "data.sample(frac=1, random_state=42, replace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 694,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 695,
    "metadata": {},
    "outputs": [
     {
@@ -499,17 +500,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 696,
    "metadata": {},
    "outputs": [],
    "source": [
     "def h(w, x):    \n",
-    "    return np.sign(np.dot(w.T, x))"
+    "    return np.sign(np.dot(w, x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 697,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,11 +520,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 698,
    "metadata": {},
    "outputs": [],
    "source": [
     "def perceptron(X, y, w_init):\n",
+    "    count = 0\n",
     "    N = X.shape[0]\n",
     "    d = X.shape[1]\n",
     "    w = w_init\n",
@@ -541,26 +543,53 @@
     "                mis_point.append(i)\n",
     "                w_new = w + yi * xi \n",
     "                w = w_new\n",
-    "        if len(mis_point) == 0 or len(mis_point) >= len(mis_point_before):\n",
+    "        count+=1\n",
+    "        if len(mis_point) == 0 or len(mis_point) == len(mis_point_before):\n",
     "            break\n",
-    "    return (w, mis_point)"
+    "    return (w, mis_point, count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 699,
    "metadata": {},
    "outputs": [],
    "source": [
     "y_train_arr = [-1 if i == 0 else 1 for i in y_train]\n",
     "X_train_arr = x_train.values\n",
     "d = x_train.shape[1]\n",
-    "w_init = np.random.randn(d, 1)\n"
+    "w_init = np.random.randn(1, d)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 700,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.49671415, -0.1382643 ,  0.64768854,  1.52302986, -0.23415337,\n",
+       "        -0.23413696,  1.57921282,  0.76743473, -0.46947439,  0.54256004,\n",
+       "        -0.46341769, -0.46572975,  0.24196227, -1.91328024, -1.72491783,\n",
+       "        -0.56228753, -1.01283112,  0.31424733, -0.90802408, -1.4123037 ,\n",
+       "         1.46564877, -0.2257763 ,  0.0675282 , -1.42474819, -0.54438272,\n",
+       "         0.11092259, -1.15099358,  0.37569802, -0.60063869, -0.29169375,\n",
+       "        -0.60170661]])"
+      ]
+     },
+     "execution_count": 700,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w_init"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 701,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +598,7 @@
        "-1.0"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 701,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,36 +609,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 702,
    "metadata": {},
    "outputs": [],
    "source": [
-    "(w, m) = perceptron(X_train_arr, y_train_arr, w_init)"
+    "(w, m, count) = perceptron(X_train_arr, y_train_arr, w_init)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 703,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "207"
+       "37"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 703,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(m)"
+    "count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 704,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_perceptron(X, y, w):\n",
+    "    y_test = [-1 if i == 0 else 1 for i in y]\n",
+    "    X_test = X.values\n",
+    "    Positive = 0\n",
+    "    Negative = 0\n",
+    "    for i in range(X_test.shape[0]):\n",
+    "        if h(w, x_test[i])[0] != y_test[i]:\n",
+    "            Negative+=1\n",
+    "        else:\n",
+    "            Positive+=1\n",
+    "    return(Positive, Negative)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 705,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[705], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m (P,N) \u001b[38;5;241m=\u001b[39m \u001b[43mtest_perceptron\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mw\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[704], line 7\u001b[0m, in \u001b[0;36mtest_perceptron\u001b[1;34m(X, y, w)\u001b[0m\n\u001b[0;32m      5\u001b[0m Negative \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(X_test\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]):\n\u001b[1;32m----> 7\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m h(w, i)[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m y_test[i]:\n\u001b[0;32m      8\u001b[0m         Negative\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[1;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     ]
+    }
+   ],
+   "source": [
+    "(P,N) = test_perceptron(x_test, y_test, w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +709,7 @@
        "0.9213250517598344"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 549,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +729,7 @@
        "0.9651162790697675"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 550,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +749,7 @@
        "['Perceptron.pkl']"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 551,
      "metadata": {},
      "output_type": "execute_result"
     }
