--- a/train_model_2.ipynb
+++ b/train_model_2.ipynb
@@ -178,7 +178,7 @@
     "cv_scores = [] \n",
     "\n",
     "from sklearn.model_selection import cross_val_score \n",
-    "# perform 10 fold cross validation \n",
+    "# thực hiện xác nhận chéo 10 lần\n",
     "for k in range(1, 51, 2): \n",
     "\tneighbors.append(k) \n",
     "\tknn = KNeighborsClassifier(n_neighbors = k) \n",
@@ -213,11 +213,11 @@
    "source": [
     "MSE = [1-x for x in cv_scores] \n",
     "\n",
-    "# determining the best k \n",
+    "# xác định k tốt nhất\n",
     "optimal_k = neighbors[MSE.index(min(MSE))] \n",
     "print('The optimal number of neighbors is % d ' % optimal_k) \n",
     "\n",
-    "# plot misclassification error versus k \n",
+    "# vẽ lỗi phân loại sai số k\n",
     "plt.figure(figsize = (10, 6)) \n",
     "plt.plot(neighbors, MSE) \n",
     "plt.xlabel('Number of neighbors') \n",
