--- a/train_model_1.ipynb
+++ b/train_model_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,13 @@
       "Cost after iteration  30:  0.590799\n",
       "Cost after iteration  40:  0.570802\n",
       "Cost after iteration  50:  0.552863\n",
-      "Cost after iteration  60:  0.536710\n",
+      "Cost after iteration  60:  0.536710\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Cost after iteration  70:  0.522103\n",
       "Cost after iteration  80:  0.508838\n",
       "Cost after iteration  90:  0.496739\n"
@@ -302,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +347,7 @@
        "['logistic_regression_model.pkl']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
