--- a/machinelearning/app/training/train_model_2.ipynb
+++ b/machinelearning/app/training/train_model_2.ipynb
@@ -6,8 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score \n",
+    "from sklearn.neighbors import KNeighborsClassifier, LocalOutlierFactor\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -55,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = data.diagnosis.values\n",
+    "y = data.diagnosis\n",
     "x_data = data.drop(['diagnosis', \"Unnamed: 0\"], axis = 1)\n",
     "\n",
     "# Chuẩn hóa \n",
@@ -83,7 +84,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Phát hiện ngoại vi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf=LocalOutlierFactor()\n",
+    "out_predict=clf.fit_predict(X_train)\n",
+    "X_score=clf.negative_outlier_factor_\n",
+    "outlier_score=pd.DataFrame()\n",
+    "outlier_score[\"Score\"]=X_score\n",
+    "outlier_score[\"Score\"].head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold=-2.5\n",
+    "filtre=outlier_score[\"Score\"]<threshold\n",
+    "outlier_index=outlier_score[filtre].index.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train=X_train.drop(outlier_index)\n",
+    "y_train=y_train.drop(outlier_index).values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "HUẤN LUYỆN KNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn = KNeighborsClassifier() \n",
+    "knn.fit(X_train, y_train).score(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred1 = knn.predict(X_test)\n",
+    "cross_val1 = cross_val_score(knn, X, y, cv = 10, scoring = 'accuracy') \n",
+    "accuracy1 = accuracy_score(y_test, y_pred1)\n",
+    "precision1 = precision_score(y_test, y_pred1)\n",
+    "recall1 = recall_score(y_test, y_pred1)\n",
+    "f1_1 = f1_score(y_test, y_pred1)\n",
+    "auc1 = roc_auc_score(y_test, y_pred1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tối ưu"
    ]
   },
   {
@@ -102,7 +195,6 @@
     "neighbors = [] \n",
     "cv_scores = [] \n",
     "\n",
-    "from sklearn.model_selection import cross_val_score \n",
     "# thực hiện xác nhận chéo 10 lần\n",
     "for k in range(1, 51, 2): \n",
     "\tneighbors.append(k) \n",
@@ -138,8 +230,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "knn = KNeighborsClassifier(n_neighbors=13) \n",
-    "knn.fit(X_train, y_train).score(X_train, y_train)"
+    "Knn_Best_Params = KNeighborsClassifier(n_neighbors=13) \n",
+    "Knn_Best_Params.fit(X_train, y_train).score(X_train, y_train)"
    ]
   },
   {
@@ -148,7 +240,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "knn.score(X_test, y_test)"
+    "Knn_Best_Params.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred2 = Knn_Best_Params.predict(X_test)\n",
+    "cross_val2 = cross_val_score(Knn_Best_Params, X, y, cv = 10, scoring = 'accuracy')\n",
+    "accuracy2 = accuracy_score(y_test, y_pred2)\n",
+    "precision2 = precision_score(y_test, y_pred2)\n",
+    "recall2 = recall_score(y_test, y_pred2)\n",
+    "f1_2 = f1_score(y_test, y_pred2)\n",
+    "auc2 = roc_auc_score(y_test, y_pred2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So sánh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data1 = {\n",
+    "    'Model': ['KNN','Knn_Best_Params'],\n",
+    "    \"cross_val\":[cross_val1.mean(), cross_val2.mean()],\n",
+    "    'Accuracy': [accuracy1, accuracy2],\n",
+    "    'Precision': [precision1, precision2],\n",
+    "    'Recall': [recall1, recall2],\n",
+    "    'F1 Score': [f1_1, f1_2],\n",
+    "    'AUC': [auc1, auc2]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data1)\n",
+    "df"
    ]
   },
   {
@@ -165,7 +299,7 @@
    "outputs": [],
    "source": [
     "import joblib\n",
-    "joblib.dump(knn, 'knn.pkl')"
+    "joblib.dump(Knn_Best_Params, 'knn.pkl')"
    ]
   }
  ],
@@ -185,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
